Add endpoint to get all products
